// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect multiple work render work 1`] = `
"<div class=\\"ix-tree-select ix-tree-select-opened ix-tree-select-single ix-tree-select-with-suffix ix-tree-select-md\\">
  <!----><label class=\\"ix-tree-select-selector\\">
    <div class=\\"ix-tree-select-selector-item\\"><span class=\\"ix-tree-select-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-tree-select-selector-input\\"><input class=\\"ix-tree-select-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <!---->
    <div class=\\"ix-tree-select-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
    <!---->
  </label>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect single work custom keys work 1`] = `
"<div class=\\"ix-tree-select ix-tree-select-opened ix-tree-select-single ix-tree-select-with-suffix ix-tree-select-md\\">
  <!----><label class=\\"ix-tree-select-selector\\">
    <div class=\\"ix-tree-select-selector-item\\"><span class=\\"ix-tree-select-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-tree-select-selector-input\\"><input class=\\"ix-tree-select-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <!---->
    <div class=\\"ix-tree-select-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
    <!---->
  </label>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect single work render work 1`] = `
"<div class=\\"ix-tree-select ix-tree-select-opened ix-tree-select-single ix-tree-select-with-suffix ix-tree-select-md\\">
  <!----><label class=\\"ix-tree-select-selector\\">
    <div class=\\"ix-tree-select-selector-item\\"><span class=\\"ix-tree-select-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-tree-select-selector-input\\"><input class=\\"ix-tree-select-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <!---->
    <div class=\\"ix-tree-select-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
    <!---->
  </label>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect single work searchFn work 1`] = `
"<div class=\\"ix-tree-select ix-tree-select-single ix-tree-select-with-suffix ix-tree-select-md\\" searchvalue=\\"node\\">
  <!----><label class=\\"ix-tree-select-selector\\">
    <div class=\\"ix-tree-select-selector-item\\"><span class=\\"ix-tree-select-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-tree-select-selector-input\\"><input class=\\"ix-tree-select-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <!---->
    <div class=\\"ix-tree-select-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
    <!---->
  </label>
</div>
<!---->"
`;

exports[`TreeSelect single work searchFn work 2`] = `
"<div class=\\"ix-tree-select ix-tree-select-single ix-tree-select-with-suffix ix-tree-select-md\\" searchvalue=\\"node\\">
  <!----><label class=\\"ix-tree-select-selector\\">
    <div class=\\"ix-tree-select-selector-item\\"><span class=\\"ix-tree-select-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-tree-select-selector-input\\"><input class=\\"ix-tree-select-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <!---->
    <div class=\\"ix-tree-select-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" aria-label=\\"down\\"><svg viewBox=\\"64 64 896 896\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" fill=\\"currentColor\\" aria-hidden=\\"true\\" data-icon=\\"down\\">
          <path d=\\"m502.976 728.896-388.544-388.48a12.8 12.8 0 0 1 0-18.176l27.136-27.136a12.8 12.8 0 0 1 18.112 0L502.976 638.4a12.8 12.8 0 0 0 18.048 0L864.32 295.104a12.8 12.8 0 0 1 18.112 0l27.136 27.136a12.8 12.8 0 0 1 0 18.112l-388.48 388.48a12.8 12.8 0 0 1-18.112 0z\\"></path>
        </svg></i></div>
    <!---->
  </label>
</div>
<!---->"
`;

exports[`TreeSelect single work searchFn work 3`] = `
"<div class=\\"ix-tree-select ix-tree-select-single ix-tree-select-with-suffix ix-tree-select-md\\" searchvalue=\\"node\\">
  <!----><label class=\\"ix-tree-select-selector\\">
    <div class=\\"ix-tree-select-selector-item\\"><span class=\\"ix-tree-select-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-tree-select-selector-input\\"><input class=\\"ix-tree-select-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <!---->
    <div class=\\"ix-tree-select-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" aria-label=\\"down\\"><svg viewBox=\\"64 64 896 896\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" fill=\\"currentColor\\" aria-hidden=\\"true\\" data-icon=\\"down\\">
          <path d=\\"m502.976 728.896-388.544-388.48a12.8 12.8 0 0 1 0-18.176l27.136-27.136a12.8 12.8 0 0 1 18.112 0L502.976 638.4a12.8 12.8 0 0 0 18.048 0L864.32 295.104a12.8 12.8 0 0 1 18.112 0l27.136 27.136a12.8 12.8 0 0 1 0 18.112l-388.48 388.48a12.8 12.8 0 0 1-18.112 0z\\"></path>
        </svg></i></div>
    <!---->
  </label>
</div>
<!---->"
`;

exports[`TreeSelect single work searchable work 1`] = `
"<div class=\\"ix-tree-select ix-tree-select-opened ix-tree-select-single ix-tree-select-searchable ix-tree-select-with-suffix ix-tree-select-md\\">
  <!----><label class=\\"ix-tree-select-selector\\">
    <div class=\\"ix-tree-select-selector-item\\"><span class=\\"ix-tree-select-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-tree-select-selector-input\\"><input class=\\"ix-tree-select-selector-input-inner\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <!---->
    <div class=\\"ix-tree-select-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
    <!---->
  </label>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect single work searchable work 2`] = `
"<div class=\\"ix-tree-select ix-tree-select-opened ix-tree-select-single ix-tree-select-with-suffix ix-tree-select-md\\">
  <!----><label class=\\"ix-tree-select-selector\\">
    <!---->
    <div class=\\"ix-tree-select-selector-input\\"><input class=\\"ix-tree-select-selector-input-inner\\" autocomplete=\\"off\\" style=\\"opacity: 0;\\">
      <!---->
    </div>
    <!---->
    <div class=\\"ix-tree-select-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" aria-label=\\"down\\"><svg viewBox=\\"64 64 896 896\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" fill=\\"currentColor\\" aria-hidden=\\"true\\" data-icon=\\"down\\">
          <path d=\\"m502.976 728.896-388.544-388.48a12.8 12.8 0 0 1 0-18.176l27.136-27.136a12.8 12.8 0 0 1 18.112 0L502.976 638.4a12.8 12.8 0 0 0 18.048 0L864.32 295.104a12.8 12.8 0 0 1 18.112 0l27.136 27.136a12.8 12.8 0 0 1 0 18.112l-388.48 388.48a12.8 12.8 0 0 1-18.112 0z\\"></path>
        </svg></i></div>
    <!---->
  </label>
</div>
<!--teleport start-->
<!--teleport end-->"
`;
